app/scss/sitewide.scss
/* variables */
$blue: #28779E;
$green: #A4B345;
$gray: #939598;
$white: #ffffff;
$red-danger: #A94442;
$red-bg-danger: #F2DEDE;


/* styles */
body {
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  color: black;
  font-size: 18pt;
  overflow-x: hidden;
}

@font-face {
  font-family: SignPainter;
  src: url('fonts/SignPainter.otf') format('opentype');
  font-weight: normal;
}

.sign-painter {
  font-family: 'SignPainter', serif;
  padding-left: 35px;
  color: $white;
  font-size: 40pt;
}

.page-title {
  background-image: url('../img/paint-stroke.png');
  width: 408px;
  height: 70px;
  background-repeat: no-repeat;
}

video {
  z-index: -1;
}

.dna-segment-img {
  padding-top: 10px;
}

.dna-segment-video {
  padding-top: 10px;
}

